src/components/Header/Header.module.scss
.header {
  width: 100%;
  padding: 32px 0;

  .logoWrap {
    display: flex;
    justify-content: center;
    margin-bottom: 32px;

    .logo {
      width: 200px;
      height: auto;
    }

    @media (min-width: 744px) {
      margin-bottom: 48px;

      .logo {
        width: 250px;
      }
    }
  }

  .navList {
    display: none;

    @media (min-width: 744px) {
      display: flex;
      justify-content: space-between;
      gap: 48px;
      list-style: none;
      text-transform: uppercase;
      background: var(--bіliy);
      border-radius: 50px;
      padding: 24px 48px;
      width: fit-content;
      min-width: 701px;
      height: 70px;
      margin-inline: auto;

      a {
        font-family: var(--second-family);
        font-size: 14px;
        line-height: 115%;
        transition: color 0.3s ease, background 0.2s ease;
        padding: 4px 8px;
        border-radius: 50px;

        &:hover {
          background: var(--svіtlo-chervoniy);
        }

        &:active {
          color: var(--chervoniy-volnicya);
        }
      }

      .activeLink {
        color: var(--chervoniy-volnicya);
      }
    }
  }

  .menuControls {
    opacity: 1;
    transform: none;
    pointer-events: auto;
    transition: opacity 0.4s ease;

    @media (min-width: 744px) {
      display: none;
    }
  }

  .hiddenControls {
    opacity: 0;
    pointer-events: none;
    opacity: 0;
    pointer-events: none;
  }

  .menuButton {
    display: flex;
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
    border-radius: 50px;
    padding: 16px 32px;
    margin: 0 auto;
    width: 200px;
    height: 54px;
    background: var(--bіliy);
    border: none;
    font-family: var(--second-family);
    font-size: 12px;
    line-height: 115%;
    cursor: pointer;
    transition: color 0.3s ease;

    &:hover {
      color: var(--chервонiy-volnicya);
    }
  }

  .breadCrumbs {
    margin: 0 0 0 32px;
    padding: 24px 0 0 0;
    font-family: var(--second-family);
    font-size: 12px;
    text-transform: uppercase;
    display: flex;
    gap: 6px;

    @media (min-width: 744px) {
      display: none;
    }

    .menu {
      color: var(--neativniy-tekst);
    }
  }

  .mobileMenu {
    position: absolute;
    top: 100px;
    left: 50%;
    transform: translateX(-50%) scaleY(0);
    transform-origin: top;
    z-index: 9;
    display: flex;
    flex-direction: column;
    gap: 32px;
    background: var(--bіliy);
    border-radius: 50px;
    padding: 16px 16px 32px;
    width: 202px;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.4s ease, transform 0.4s ease;

    @media (min-width: 744px) {
      display: none;
    }

    &.open {
      transform: translateX(-50%) scaleY(1);
      opacity: 1;
      pointer-events: auto;
    }

    .closeButton {
      align-self: center;
      background: none;
      border: none;
      font-size: 18px;
      cursor: pointer;
      margin-bottom: 8px;
      transition: transform 0.3s ease;

      &:hover {
        transform: rotate(90deg);
      }
    }

    .mobileMenuList {
      list-style: none;
      padding: 0;
      margin: 0;
      display: flex;
      flex-direction: column;
      gap: 32px;
      align-items: center;
      font-family: var(--second-family);
      font-size: 12px;
      line-height: 115%;
      text-transform: uppercase;

      a {
        display: block;
        text-align: center;
        padding: 4px 8px;
        border-radius: 50px;
        transition: color 0.3s ease, background 0.2s ease;

        &:hover {
          background: var(--svіtlo-chervoniy);
        }

        &:active {
          color: var(--chervoniy-volnicya);
        }

        &.activeLink {
          color: var(--chervoniy-volnicya);
        }
      }
    }
  }
}

